--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
- # dependencies
-.node_modules
-.pnp
-.pnp.js
+# See https://help.github.com/ignore-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
 
 # testing
 /coverage
